<resources>
    <string name="app_name">尤玩</string>
    <string name="UMENG_APPKEY">607d71ce9e4e8b6f61767a85</string>
    <string name="UMENG_APP_SECRET">7bc4c2d146e193981b4e7fde5081ffee</string>
    <string name="WECHAT_APPID">wx4b574e4037526791</string>
    <string name="AMAP_APPID">81f9a948c582e68584aa5379f15c2a6d</string>
    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">加载失败</string>
    <string name="no_network_view_hint">网络异常</string>
    <string name="service_error">服务器出错，请重试</string>
    <string name="retry_net_error">网络异常，点击重试</string>
    <string name="retry_load_error">加载失败，请稍后重试</string>
    <string name="exit_tip">再按一次退出程序</string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="confirm">确定</string>
    <string name="no_data">暂无数据</string>
    <string name="no_network">网络异常</string>
    <string name="no_network_tip">请检查网络后点击重新加载</string>
    <string name="data_error">加载失败，点击重试</string>
    <string name="network_unavailable_tip">网络连接不可用,请检查网络设置!</string>
    <string name="location_is_not_available">位置服务未开启</string>
    <string name="please_open_location">请先开启定位</string>
    <string name="msg_cannot_send">该消息无法发送</string>
    <string name="pic_send_at_time">图片发送于%1$s</string>
    <string name="video_send_at_time">视频发送于%1$s</string>
    <string name="on_line">在线</string>
    <string name="on_line_pc">PC在线</string>
    <string name="on_line_mac">Mac在线</string>
    <string name="on_line_web">web在线</string>
    <string name="client_aos">Android</string>
    <string name="client_ios">iOS</string>
    <string name="on_line_busy">忙碌</string>
    <string name="off_line">离线</string>
    <string name="am">上午</string>
    <string name="pm">下午</string>
    <string name="today">今天</string>
    <string name="last_day">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="am1">凌晨 </string>
    <string name="pm1">晚上 </string>
    <string name="Sunday">星期日</string>
    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thirsday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Satuarday">星期六</string>
    <string name="hours">小时</string>
    <string name="minute">分</string>
    <string name="seconds">秒</string>
    <string name="agora_access_token">0067d9f7f306ee44de4a168d2979e12330eIAC7VuieW0Cf6JuYZWcz6kfy0ZAz+7duY4p5OXPT4Fd9bz37XygAAAAAEADJ+bHOCqaaXwEAAQAKpppf</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <string name="empty"></string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="search">搜索</string>
    <string name="remove">移除</string>
    <string name="add">添加</string>
    <string name="create">新建</string>
    <string name="without_content">暂无</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="menu">菜单</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="readed">已读</string>
    <string name="picture">图片</string>
    <string name="succeed">成功</string>
    <string name="fail">失败</string>
    <string name="error">错误</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="input_panel_ack_msg">已读回执</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_history_query_ingore">云消息记录(被清除消息入库)</string>
    <string name="message_history_query_remember">云消息记录(被清除消息不入库)</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_clear_record">清空本地消息记录(记录操作)</string>
    <string name="message_clear_not_record">清空本地消息记录(不记录操作)</string>
    <string name="message_p2p_clear">清空点对点历史消息</string>
    <string name="message_p2p_clear_tips">确定清空点对点历史消息?</string>
    <string name="sure_keep_roam">确认单保留漫游</string>
    <string name="message_info">聊天信息</string>
    <string name="avchat_list">音视频通话记录</string>
    <string name="input_panel_photo">图 片</string>
    <string name="input_panel_video">视 频</string>
    <string name="input_panel_location">位 置</string>
    <string name="input_panel_take">拍 摄</string>
    <string name="im_choose_pic">请选择JPG PNG BMP GIF格式的图片文件</string>
    <string name="repeat_download_message">重新下载?</string>
    <string name="repeat_send_has_blank">重发</string>
    <string name="repeat_send_message">重发消息?</string>
    <string name="reply_has_blank">回 复</string>
    <string name="reply_with_message">回复 %s: %s</string>
    <string name="reply_with_amount">%s 条回复</string>
    <string name="copy_has_blank">复制</string>
    <string name="delete_has_blank">删除</string>
    <string name="voice_to_text">转文字</string>
    <string name="forward">转发</string>
    <string name="forward_to_person">转发到个人</string>
    <string name="forward_to_team">转发到群组</string>
    <string name="withdrawn_msg">撤回</string>
    <string name="withdrawn_msg_count_notify">撤回(通知计入未读数)</string>
    <string name="withdrawn_msg_not_count_notify">撤回(通知不计入未读数)</string>
    <string name="multiple_selection">多 选</string>
    <string name="delete_msg_self">单向删除消息</string>
    <string name="delete_msg_self_success">单向删除成功</string>
    <string name="delete_msg_self_failed">单向删除失败</string>
    <string name="save">保存</string>
    <string name="main_msg_list_delete_chatting">删除该聊天</string>
    <string name="main_msg_list_sticky_on_top">置顶该聊天</string>
    <string name="main_msg_list_clear_sticky_on_top">取消置顶</string>
    <string name="save_to_device">保存到手机</string>
    <string name="picture_save_fail">图片保存失败</string>
    <string name="picture_save_to">图片已保存到手机</string>
    <string name="search_join_team">搜索加入群组</string>
    <string name="file_transfer_state_downloaded">已下载</string>
    <string name="file_transfer_state_undownload">未下载</string>
    <string name="trans_voice_failed">语音转化失败</string>
    <string name="team_invalid_tip">您已退出该群</string>
    <string name="normal_team_invalid_tip">您已退出该讨论组</string>
    <string name="team_send_message_not_allow">您已不在该群，不能发送消息</string>
    <string name="send">发送</string>
    <string name="unsupport_title">无法显示该内容</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>
    <string name="revoke_failed">发送时间超过2分钟的消息，不能被撤回</string>
    <string name="pic_and_video">图片和视频</string>
    <string name="black_list_send_tip">消息已发送，但对方拒收</string>
    <string name="confirm_forwarded_to">确认转发给</string>
    <string name="confirm_forwarded">确认转发</string>
    <string name="record_audio">按住 说话</string>
    <string name="record_audio_end">松开  结束</string>
    <string name="sdcard_not_exist_error">请插入SD卡</string>
    <string name="recording_error">录音失败，请重试</string>
    <string name="recording_init_failed">初始化录音失败</string>
    <string name="recording_cancel">手指上滑，取消发送</string>
    <string name="timer_default">00:00</string>
    <string name="recording_cancel_tip">松开手指，取消发送</string>
    <string name="recording_max_time">录音达到最大时间，是否发送？</string>
    <string name="play_ready">准备播放</string>
    <string name="play_complete">播放完成</string>
    <string name="playing">播放中</string>
    <string name="gallery_invalid">你的手机没有图库程序</string>
    <string name="sdcard_not_enough_head_error">SD卡被拔出或存储空间不足，无法保存头像</string>
    <string name="sdcard_not_enough_error">存储空间不足，无法保存此次多媒体消息</string>
    <string name="download_video">正在下载视频</string>
    <string name="download_video_fail">视频下载失败,请重试</string>
    <string name="look_video_fail">无法播放该视频</string>
    <string name="look_video_fail_try_again">暂时无法播放视频，请重试</string>
    <string name="surface_has_not_been_created">Surface尚未创建完成</string>
    <string name="surface_created">Surface创建完成</string>
    <string name="video_play">视频播放</string>
    <string name="video_record">视频录制</string>
    <string name="video_record_symbol">REC</string>
    <string name="video_record_begin">开始录制</string>
    <string name="connect_vedio_device_fail">无法连接视频设备 ，请稍候再试</string>
    <string name="capture_video_size_in_kb">视频文件大小为: %1$dKB,</string>
    <string name="capture_video_size_in_mb">视频文件大小为: %1$.2fMB,</string>
    <string name="is_send_video">是否发送该视频？</string>
    <string name="start_camera_to_record_failed">启动摄像头录制视频失败</string>
    <string name="stop_fail_maybe_stopped">停止失败，可能已经停止</string>
    <string name="video_exception">视频文件异常</string>
    <string name="im_choose_video_file_size_too_large">视频文件过大，系统限制为20MB</string>
    <string name="im_choose_video">请选择3GP MP4格式的视频文件</string>
    <string name="video_record_short">录制视频太短</string>
    <string name="download_progress_description">%1$s（%2$s/%3$s）</string>
    <string name="message_search_no_result">无结果</string>
    <string name="picker_image_preview">预览</string>
    <string name="picker_image_send">发送</string>
    <string name="picker_image_folder">相册</string>
    <string name="picker_image_album_loading">相册加载中…</string>
    <string name="picker_image_album_empty">相册中没有图片！</string>
    <string name="picker_image_folder_info">共%d张</string>
    <string name="picker_image_exceed_max_image_select">最多选择%d张图片！</string>
    <string name="picker_image_send_select">完成（%d）</string>
    <string name="picker_image_preview_original">发送原图</string>
    <string name="picker_image_preview_original_select">发送原图（%s）</string>
    <string name="picker_image_error">获取图片出错</string>
    <string name="image_compressed_size">该原始图片大小为: %1$s,</string>
    <string name="bind_now">立即绑定</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="please_input_alipay_account">填写支付宝账号</string>
    <string name="name">姓名</string>
    <string name="alipay_real_name">支付宝实名认证的姓名</string>
    <string name="contact">联系方式</string>
    <string name="please_input_your_contact">填写您的联系方式</string>
    <string name="login_out">退出登录</string>
    <string name="not_open">未开启</string>
    <string name="push_toggle_tip">开启或关闭推送通知，需要到系统设置-通知中心设置</string>
    <string name="accept_push">接受推送通知</string>
    <string name="square_push">广场通知</string>
    <string name="zan_push">点赞提醒</string>
    <string name="comment_push">评论提醒</string>
    <string name="push_type">通知类型</string>
    <string name="reply_push">回复提醒</string>
    <string name="voice_push">音效通知</string>
    <string name="virate_push">震动通知</string>
    <string name="other">其他</string>
    <string name="message_push">短信通知</string>
    <string name="wechat_push">微信推送</string>
    <string name="wechat_receive_message">微信接收消息通知</string>
    <string name="jitang_wechat_public">尤玩旅行微信公众账号</string>
    <string name="change_avatar">修改头像</string>
    <string name="avatar_not_pass_content">尊敬的用户，您上传的头像未使用真实照片或涉及违规，替换真实照片前您将持续对其他不可见</string>
    <string name="goto_human_verify">进入人工审核</string>
    <string name="cancel_verify">取消审核</string>
</resources>