<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.activity.BindAlipayAccountActivity">


    <include
        android:id="@+id/barCl"
        layout="@layout/layout_actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_rectangle_f7f8fa_10dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alipay_account"
            android:textColor="#ff333333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etAlipayAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/please_input_alipay_account"
            android:textColor="@color/color333"
            android:textColorHint="#ffc6cad4"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_rectangle_f7f8fa_10dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#ff333333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etAlipayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/alipay_real_name"
            android:textColor="@color/color333"
            android:textColorHint="#ffc6cad4"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_rectangle_f7f8fa_10dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="#ff333333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etTelephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/please_input_your_contact"
            android:inputType="number"
            android:textColor="@color/color333"
            android:textColorHint="#ffc6cad4"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>