<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@drawable/shape_rectangle_white_15dp"
    android:orientation="vertical">

    <com.sdy.luxurytravelapplication.widgets.RoundImageView
        android:id="@+id/icon"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/default_image_5dp"
        android:visibility="visible"
        app:borderRadius="25dp"
        app:type="round" />

    <ImageView
        android:id="@+id/iconWarn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp"
        android:src="@drawable/icon_warning" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/login_out"
        android:textColor="#ff3f3f3f"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.4"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/avatar_not_pass_content"
        android:textColor="#ff333333"
        android:textSize="14sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/message"
        android:layout_marginTop="23dp"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:id="@+id/llVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/changeAvator"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/change_avatar"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/gotoHumanVerify"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/goto_human_verify"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/cancelVerify"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cancel_verify"
            android:textColor="#ff9c9c9c"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConfirmOrCancel"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_below="@id/view"
        android:visibility="visible">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#ff9c9c9c"
            android:textSize="18sp"
            android:textStyle="normal" />

        <View
            android:id="@+id/cancelView"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>

